# AgentGate

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: GUIDE.md
examples/: basic_usage.py  example_policy.yaml
python/agentgate/: __init__.py  core.py
python/agentgate/anomaly/: alerts.py  detector.py
python/agentgate/audit/: collector.py  models.py  query.py  store.py
python/agentgate/cli/: __init__.py  main.py
python/agentgate/integrations/: __init__.py  autogen.py  base.py  crewai.py  generic.py  langchain.py
python/agentgate/policy/: defaults.py  engine.py  loader.py  schema.py
src/: lib.rs
src/audit/: mod.rs  signer.rs  writer.rs
src/policy/: matcher.rs  mod.rs  types.rs
tests/: conftest.py  test_anomaly.py  test_audit.py  test_core.py  test_integrations.py  test_policy_engine.py  test_policy_loader.py  test_policy_schema.py
